# fedigraph

./: .gitignore  README.md  graph.json  package-lock.json  package.json  tsconfig.graph-builder.json  tsconfig.json
.github/workflows/: build-graph.yaml  build-page.yaml  build.yaml
build-graph/: Cargo.toml
build-graph/src/: main.rs
data-fetcher/: fetch-data.py
frontend/: .eslintrc.yaml  .gitignore  .prettierrc.json  index.html  package-lock.json  package.json  tsconfig.graph-builder.json  tsconfig.json
frontend/public/: site.webmanifest
frontend/src/: App.tsx  graph.ts
frontend/src/graph-builder/: build-graph.ts
src/frontend/: App.tsx  graph.ts  index.css
src/graph-builder/: build-graph.ts
